--- a/test.html
+++ b/test.html
@@ -3,7 +3,10 @@
 </head>
 <body>
 <script>
-alert("Hello! I am an alert box!!");
+function myFunc() {
+  document.getElementById("head1").innerHTML="word!";
+};
 </script>
+  <h1 id="head1" onclick="myFunc()">test</h1>
 </body>
 </html>
