--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
 <body>
 <script>
 function myFunc() {
-  document.getElementById("head1").innerHTML="word!";
+  document.getElementById("head1").innerHTML="it do!";
 };
 </script>
-  <h1 id="head1" onclick="myFunc()">test</h1>
+  <h1 id="head1" onclick="myFunc()">test: click me</h1>
 </body>
 </html>
