--- a/RGB-Picker.html
+++ b/RGB-Picker.html
@@ -22,7 +22,7 @@
    <rect id="sq-green" onclick="callColor('GREEN', 'sq-green', '#00ff00')" height="63" width="63" y="166.5159" x="73" stroke-width="3" stroke="#3f3f3f" fill="#00ff00" rx="15" ry="15"    onmouseover="document.getElementById('sq-red').setAttribute('fill', '#f66'); document.getElementById('sq-red').setAttribute('stroke', '#ccc'); document.getElementById('sq-red').setAttribute('stroke-width', '5');" 
     onmouseout="document.getElementById('sq-green').setAttribute('fill', '#f00'); document.getElementById('sq-green').setAttribute('stroke', '#3f3f3f'); document.getElementById('sq-green').setAttribute('stroke-width', '3');"/>
    <rect id="sq-blue" onclick="callColor('BLUE', 'sq-blue', '#0000ff')" height="63" width="63" y="264.563759" x="73" stroke-width="3" stroke="#3f3f3f" fill="#0000ff" rx="15" ry="15"    onmouseover="document.getElementById('sq-red').setAttribute('fill', '#f66'); document.getElementById('sq-red').setAttribute('stroke', '#ccc'); document.getElementById('sq-red').setAttribute('stroke-width', '5');" 
-    onmouseout="document.getElementById('sq-red').setAttribute('fill', '#f00'); document.getElementById('sq-red').setAttribute('stroke', '#3f3f3f'); document.getElementById('sq-red').setAttribute('stroke-width', '3');"/>
+    onmouseout="document.getElementById('sq-blue').setAttribute('fill', '#f00'); document.getElementById('sq-blue').setAttribute('stroke', '#3f3f3f'); document.getElementById('sq-blue').setAttribute('stroke-width', '3');"/>
    
  </g></a>
   <text xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="30" id="svg_7" y="92.4375" x="179" stroke-opacity="null" stroke-width="0" stroke="#3f3f3f" fill="#ccc">&lt;&lt; pick a color on the left</text>
