compiler2 link not working

--- a/demos/compiler.html
+++ b/demos/compiler.html
@@ -205,6 +205,6 @@
     }
             
         </script><br>
-	<a href="compiler2.html">Version 2</a>
+	<a href="compiler2.html">go to Version 2</a>
 </body>
 
