--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -34,7 +34,7 @@ var polygon = L.polygon([
 
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
-    .setContent("University of Illinois - Urbana Champaign.")
+    .setContent("University of Illinois - Urbana Champaign")
     .openOn(mymap);
 
 function onMapClick(e) {
