--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -42,6 +42,8 @@ var polygon = L.polygon([
     [40.105, -88.241],
     [40.107, -88.242]
 ]).addTo(mymap);
+ 
+var marker = L.marker([40.1093, -88.2275]).addTo(mymap);
 
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
