--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -45,9 +45,12 @@ var polygon = L.polygon([
  
 var marker = L.marker([40.1093, -88.2275]).addTo(mymap);
  
-marker.bindPopup("<b>Illini Union</b><br>Student union in Urbana, Illinois").openPopup();
+marker.bindPopup("<b>Illini Union</b><br>Student union in Urbana, Illinois");
 
-mymap.on('click', onMapClick);
+var popup = L.popup()
+    .setLatLng([40.112, -88.227])
+    .setContent("University of Illinois - Urbana Champaign")
+    .openOn(mymap);
 
 </script>
 
