--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -45,7 +45,7 @@ var polygon = L.polygon([
  
 var marker = L.marker([40.1093, -88.2275]).addTo(mymap);
  
-marker.bindPopup("<b>Illini Union</b><br>Student union in Urbana, Illinois");
+marker.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois</center>");
 
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
