--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -43,9 +43,9 @@ var polygon = L.polygon([
     [40.107, -88.242]
 ]).addTo(mymap);
  
-var marker = L.marker([40.1093, -88.2275]).addTo(mymap);
+var m_iu = L.marker([40.1093, -88.2275]).addTo(mymap);
  
-marker.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois</center>");
+m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois</center>");
 
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
