--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -44,7 +44,7 @@ var polygon = L.polygon([
 ]).addTo(mymap);
  
 var m_iu = L.marker([40.1093, -88.2275]).addTo(mymap);
-m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
+m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
 
 var m_hab = L.marker([40.1085, -88.2281]).addTo(mymap);
 m_hab.bindPopup("<center><b>Harvey Administration Building</b></center>");
