--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -55,6 +55,9 @@ m_dh.bindPopup("<center><b>Davenport Hall</b></center>");
 var m_fa = L.marker([40.1060, -88.2273]).addTo(mymap);
 m_fa.bindPopup("<center><b>Foellinger Auditorium</b></center>");
  
+var m_uio = L.marker([40.1060, -88.2273]).addTo(mymap);
+m_fa.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
+ 
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
     .setContent("University of Illinois - Urbana Champaign")
