--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -55,6 +55,12 @@ m_dh.bindPopup("<center><b>Davenport Hall</b></center>");
 var m_fa = L.marker([40.1060, -88.2273]).addTo(mymap);
 m_fa.bindPopup("<center><b>Foellinger Auditorium</b></center>");
  
+var m_jh = L.marker([40.0928, -88.2177]).addTo(mymap);
+m_jh.bindPopup("<center><b>Japan House</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://japanhouse.art.illinois.edu/en/'>>> go >></a></center>");
+
+var m_uia = L.marker([40.0935, -88.2165]).addTo(mymap);
+m_uia.bindPopup("<center><b>U of I Arboretum</b></center>");
+ 
 var m_uio = L.marker([40.1060, -88.2273]).addTo(mymap);
 m_fa.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
  
