--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -62,7 +62,7 @@ var m_uia = L.marker([40.0935, -88.2165]).addTo(mymap);
 m_uia.bindPopup("<center><b>U of I Arboretum</b></center>");
  
 var m_uio = L.marker([40.1060, -88.2273]).addTo(mymap);
-m_fa.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
+m_uio.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
  
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
