--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -44,7 +44,7 @@ var polygon = L.polygon([
 ]).addTo(mymap);
  
 var m_iu = L.marker([40.1093, -88.2275]).addTo(mymap);
-m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
+m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
 
 var m_hab = L.marker([40.1085, -88.2281]).addTo(mymap);
 m_hab.bindPopup("<center><b>Harvey Administration Building</b></center>");
@@ -54,6 +54,9 @@ m_dh.bindPopup("<center><b>Davenport Hall</b></center>");
 
 var m_fa = L.marker([40.1060, -88.2273]).addTo(mymap);
 m_fa.bindPopup("<center><b>Foellinger Auditorium</b></center>");
+ 
+var m_ml = L.marker([40.1045, -88.2290]).addTo(mymap);
+m_ml.bindPopup("<center><b>Main Library</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://www.library.illinois.edu/'>>> go >></a></center>");
  
 var m_jh = L.marker([40.0928, -88.2177]).addTo(mymap);
 m_jh.bindPopup("<center><b>Japan House</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://japanhouse.art.illinois.edu/en/'>>> go >></a></center>");
