--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -52,6 +52,9 @@ m_kcpa.bindPopup("<center><b>Krannert Center for the Performing Arts</b>&nbsp;&n
 var m_hab = L.marker([40.1085, -88.2281]).addTo(mymap);
 m_hab.bindPopup("<center><b>Harvey Administration Building</b></center>");
  
+var m_fac = L.marker([40.1027, -88.2249]).addTo(mymap);
+m_fac.bindPopup("<center><b>Funk Agricultural, Consumer, &<br>Environmental Sciences Library</b></center>");
+
 var m_dh = L.marker([40.1069, -88.2261]).addTo(mymap);
 m_dh.bindPopup("<center><b>Davenport Hall</b></center>");
 
