--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -50,7 +50,10 @@ var m_kcpa = L.marker([40.1079, -88.2226]).addTo(mymap);
 m_kcpa.bindPopup("<center><b>Krannert Center for the Performing Arts</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://krannertcenter.com/'>>> go >></a></center>");
  
 var m_hab = L.marker([40.1085, -88.2281]).addTo(mymap);
-m_hab.bindPopup("<center><b>Harvey Administration Building</b></center>");
+m_hab.bindPopup("<center><b>Harvey Administration Building</b></center>"); 
+ 
+var m_oh = L.marker([40.0991, -88.2214]).addTo(mymap);
+m_oh.bindPopup("<center><b>Oglesby Hall</b></center>");
  
 var m_fac = L.marker([40.1027, -88.2249]).addTo(mymap);
 m_fac.bindPopup("<center><b>Funk Agricultural, Consumer, &<br>Environmental Sciences Library</b></center>");
