--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -44,7 +44,7 @@ var polygon = L.polygon([
 ]).addTo(mymap);
  
 var m_iu = L.marker([40.1093, -88.2275]).addTo(mymap);
-m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
+m_iu.bindPopup("<center><b>Illini Union</b><br>Student union in Urbana, Illinois<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://union.illinois.edu/'>>> go >></a></center>");
 
 var m_kcpa = L.marker([40.1079, -88.2226]).addTo(mymap);
 m_kcpa.bindPopup("<center><b>Krannert Center for <br>the Performing Arts</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://krannertcenter.com/'>>> go >></a></center>");
@@ -80,7 +80,7 @@ var m_uia = L.marker([40.0935, -88.2165]).addTo(mymap);
 m_uia.bindPopup("<center><b>U of I Arboretum</b></center>");
  
 var m_uio = L.marker([40.1060, -88.2273]).addTo(mymap);
-m_uio.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
+m_uio.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
  
 var popup = L.popup()
     .setLatLng([40.112, -88.227])
