--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -68,13 +68,13 @@ var m_atc = L.marker([40.0960, -88.2271]).addTo(mymap);
 m_atc.bindPopup("<center><b>Atkins Tennis Center</b></center>");
  
 var m_uirb = L.marker([40.0939, -88.2246]).addTo(mymap);
-m_uirb.bindPopup("<center><b>U of I Round Barns</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://uihistories.library.illinois.edu/cgi-bin/cview?SITEID=1&ID=227'>>> go >></a></center>");
+m_uirb.bindPopup("<center><b>U of I Round Barns</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://uihistories.library.illinois.edu/cgi-bin/cview?SITEID=1&ID=227'>>> go >></a></center>");
  
 var m_ml = L.marker([40.1045, -88.2290]).addTo(mymap);
 m_ml.bindPopup("<center><b>Main Library</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://www.library.illinois.edu/'>>> go >></a></center>");
  
 var m_jh = L.marker([40.0928, -88.2177]).addTo(mymap);
-m_jh.bindPopup("<center><b>Japan House</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://japanhouse.art.illinois.edu/en/'>>> go >></a></center>");
+m_jh.bindPopup("<center><b>Japan House</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='http://japanhouse.art.illinois.edu/en/'>>> go >></a></center>");
 
 var m_uia = L.marker([40.0935, -88.2165]).addTo(mymap);
 m_uia.bindPopup("<center><b>U of I Arboretum</b></center>");
