--- a/demos/leaflet/readme.html
+++ b/demos/leaflet/readme.html
@@ -79,6 +79,15 @@ m_jh.bindPopup("<center><b>Japan House</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbs
 var m_uia = L.marker([40.0935, -88.2165]).addTo(mymap);
 m_uia.bindPopup("<center><b>U of I Arboretum</b></center>");
  
+var m_dres = L.marker([40.1032, -88.2419]).addTo(mymap);
+m_dres.bindPopup("<center><b>Disabilities Resources<br>& Educational Services</b></center>");
+ 
+var m_kam = L.marker([40.1017, -88.2313]).addTo(mymap);
+m_kam.bindPopup("<center><b>Kranner Art Museum</b></center>");
+ 
+var m_scad = L.marker([40.1019, -88.2325]).addTo(mymap);
+m_scad.bindPopup("<center><b>School of Art + Design</b></center>");
+ 
 var m_uio = L.marker([40.1060, -88.2273]).addTo(mymap);
 m_uio.bindPopup("<center><b>U of I Observatory</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://astro.illinois.edu/newsroom/history-department/campus-observatory'>>> go >></a></center>");
  
