--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -45,6 +45,9 @@ polygon.bindPopup("<center><b>School Grounds</b><br>No critters will spawn here.
 var gymBuck = L.marker([29.7837, -95.5832]).addTo(mymap);
 gymBuck.bindPopup("<center><b>The Buck Statue</b><br>Gym<br></center>");
  
+var gymPega = L.marker([29.7857, -95.5908]).addTo(mymap);
+gymPega.bindPopup("<center><b>The Pegasus Statue</b><br>Gym<br></center>");
+	
 var stopTc = L.circle([29.7838, -95.5844], {
     color: '#4863A0',
     fillColor: '#4863A0',
