--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -70,7 +70,15 @@ var stopSb = L.circle([29.7838, -95.5886], {
     fillOpacity: 0.5,
     radius: 15
 }).addTo(mymap);
-stopSb.bindPopup("<center><b>Starbucks</b><br>Pokestop<br></center>");
+stopSb.bindPopup("<center><b>Starbucks</b><br>Sponsored Pokestop<br></center>");	
+	
+var stopf1 = L.circle([29.7855, -95.5914], {
+    color: '#4863A0',
+    fillColor: '#4863A0',
+    fillOpacity: 0.5,
+    radius: 15
+}).addTo(mymap);
+stopf1.bindPopup("<center><b>Fountain</b><br>Pokestop<br></center>");
  
 var popup = L.popup()
     .setLatLng([29.785, -95.582])
