--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -79,6 +79,22 @@ var stopf1 = L.circle([29.7855, -95.5914], {
     radius: 15
 }).addTo(mymap);
 stopf1.bindPopup("<center><b>Fountain</b><br>Pokestop<br></center>");
+	
+var stopf2 = L.circle([29.7855, -95.5919], {
+    color: '#4863A0',
+    fillColor: '#4863A0',
+    fillOpacity: 0.5,
+    radius: 15
+}).addTo(mymap);
+stopf2.bindPopup("<center><b>Fountain</b><br>Pokestop<br></center>");
+	
+var stopf3 = L.circle([29.7855, -95.5925], {
+    color: '#4863A0',
+    fillColor: '#4863A0',
+    fillOpacity: 0.5,
+    radius: 15
+}).addTo(mymap);
+stopf3.bindPopup("<center><b>Fountain</b><br>Pokestop<br></center>");
  
 var popup = L.popup()
     .setLatLng([29.785, -95.582])
