--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<center><br><br><table><tr><td><div id="map" style="height: 580px; width: 60vw; border-radius: 13px; float:left;"></div><div style="height: 500px; width: 400; border-radius: 13px; float:left;"><img src="graphic.svg"></div></td></tr></table></center>
+<center><br><br><table><tr><td><div id="map" style="height: 580px; width: 60vw; border-radius: 13px 0px 0px 13px; float:left;"></div><div style="height: 500px; width: 400; border-radius: 13px; float:left;"><img src="graphic.svg"></div></td></tr></table></center>
 
 <script>
 var mymap = L.map('map').setView([29.7835, -95.5841], 16);
