--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -48,6 +48,9 @@ gymBuck.bindPopup("<center><b>The Buck Statue</b><br>Gym<br></center>");
 var gymPega = L.marker([29.7857, -95.59085]).addTo(mymap);
 gymPega.bindPopup("<center><b>The Pegasus Statue</b><br>Gym<br></center>");
 	
+var gymObie = L.marker([29.7840, -95.5932]).addTo(mymap);
+gymObie.bindPopup("<center><b>The Obelisk</b><br>Gym<br></center>");
+	
 var stopTc = L.circle([29.7838, -95.5844], {
     color: '#4863A0',
     fillColor: '#4863A0',
