--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -73,7 +73,15 @@ var stopSb = L.circle([29.7838, -95.5886], {
     fillOpacity: 0.5,
     radius: 15
 }).addTo(mymap);
-stopSb.bindPopup("<center><b>Starbucks</b><br>Sponsored Pokestop<br></center>");	
+stopSb.bindPopup("<center><b>Starbucks</b><br>Sponsored Pokestop<br></center>");
+	
+var stopCou = L.circle([29.7840, -95.5963], {
+    color: '#4863A0',
+    fillColor: '#4863A0',
+    fillOpacity: 0.5,
+    radius: 15
+}).addTo(mymap);
+stopCou.bindPopup("<center><b>Cou Yon Seafood House</b><br>Pokestop<br></center>");
 	
 var stopf1 = L.circle([29.7855, -95.5914], {
     color: '#4863A0',
