--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -22,6 +22,35 @@ var CartoDB_Positron = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/
 	maxZoom: 19
 }).addTo(mymap);
 
+var park1 = L.polygon([
+    [29.7804, -95.5978],
+    [29.7810, -95.5978],
+    [29.7809, -95.5977],
+    [29.7809, -95.5974],
+    [29.7810, -95.5970],
+    [29.7813, -95.5968],
+    [29.7816, -95.5967],
+    [29.7815, -95.5965],
+    [29.7803, -95.5965],
+    [29.7803, -95.5974],
+    [29.7804, -95.5977],
+    [29.7804, -95.5978]
+], {color: 'green',
+    fillColor: 'green',
+    fillOpacity: 0.5
+}).addTo(mymap);
+
+var park2 = L.polygon([
+    [29.7803, -95.6005],
+    [29.7808, -95.6005],
+    [29.7807, -95.6001],
+    [29.7812, -95.6000],
+    [29.7812, -95.5994],
+    [29.7803, -95.5994]
+], {color: 'green',
+    fillColor: 'green',
+    fillOpacity: 0.5
+}).addTo(mymap);
 
 var schoolGrounds = L.polygon([
     [29.7789, -95.5853],
@@ -39,7 +68,7 @@ var schoolGrounds = L.polygon([
     fillOpacity: 0.5
 }).addTo(mymap);
 	
-polygon.bindPopup("<center><b>School Grounds</b><br>No critters will spawn here.</center>");
+schoolGrounds.bindPopup("<center><b>School Grounds</b><br>No critters will spawn here.</center>");
 
  
 var gymBuck = L.marker([29.7837, -95.5832]).addTo(mymap);
