--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -104,6 +104,14 @@ var stopSb = L.circle([29.7838, -95.5886], {
 }).addTo(mymap);
 stopSb.bindPopup("<center><b>Starbucks</b><br>Sponsored Pokestop<br></center>");
 	
+var stopFish = L.circle([29.7834, -95.6019], {
+    color: '#4863A0',
+    fillColor: '#4863A0',
+    fillOpacity: 0.5,
+    radius: 15
+}).addTo(mymap);
+stopFish.bindPopup("<center><b>Fish Fountain</b><br>Pokestop<br></center>");
+	
 var stopCou = L.circle([29.7840, -95.5963], {
     color: '#4863A0',
     fillColor: '#4863A0',
