--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -95,6 +95,12 @@ gymBuck.bindPopup("<center><b>The Buck Statue</b><br>Gym<br></center>");
 var gymPega = L.marker([29.7857, -95.59085]).addTo(mymap);
 gymPega.bindPopup("<center><b>The Pegasus Statue</b><br>Gym<br></center>");
 	
+var gymBren = L.marker([29.7838, -95.5709]).addTo(mymap);
+gymBren.bindPopup("<center><b>Brenner's Steakhouse</b><br>Gym<br></center>");
+	
+var gymFert = L.marker([29.7837, -95.5701]).addTo(mymap);
+gymFert.bindPopup("<center><b>Fertility Clinic</b><br>Gym<br></center>");
+	
 var gymObie = L.marker([29.7840, -95.5932]).addTo(mymap);
 gymObie.bindPopup("<center><b>The Obelisk</b><br>Gym<br></center>");
 	
