--- a/demos/leaflet/IIW-example.html
+++ b/demos/leaflet/IIW-example.html
@@ -111,6 +111,9 @@ gymBuck.bindPopup("<center><b>The Buck Statue</b><br>Gym<br></center>");
  
 var gymPega = L.marker([29.7857, -95.59085]).addTo(mymap);
 gymPega.bindPopup("<center><b>The Pegasus Statue</b><br>Gym<br></center>");
+
+var gymStad = L.marker([29.7783, -95.6054]).addTo(mymap);
+gymStad.bindPopup("<center><b>Tully Stadium</b><br>Gym<br></center>");
 	
 var gymBren = L.marker([29.7838, -95.5709]).addTo(mymap);
 gymBren.bindPopup("<center><b>Brenner's Steakhouse</b><br>Gym<br></center>");
